--- a/index.html
+++ b/index.html
@@ -329,15 +329,12 @@
 						<hr style="border-color: #666;">
 						<ul style="list-style: none; text-align: left; color: #eee;">
 							<li><span class="ajanda">08:30 - 09:00</span>&emsp; Kayıt &amp; Açılış</li>
-							<li><span class="ajanda">09:00 - 09:50</span>&emsp; Deneme Maçları</li>
-							<li><span class="ajanda">09:50 - 10:10</span>&emsp; Ara</li>
-							<li><span class="ajanda">10:10 - 11:00</span>&emsp; Deneme Maçları</li>
-							<li><span class="ajanda">11:00 - 11:20</span>&emsp; Ara</li>
-							<li><span class="ajanda">11:20 - 12:10</span>&emsp; Deneme Maçları</li>
-							<li><span class="ajanda">12:10 - 13:00</span>&emsp; Yemek</li>
-							<li><span class="ajanda">13:00 - 13:50</span>&emsp; Deneme Maçları</li>
-							<li><span class="ajanda">13:50 - 14:10</span>&emsp; Ara</li>
-							<li><span class="ajanda">14:10 - 15:00</span>&emsp; Deneme Maçları</li>
+							<li><span class="ajanda">09:00 - 09:45</span>&emsp; Açılış Konuşması</li>
+							<li><span class="ajanda">09:45 - 10:15</span>&emsp; Çalışma Alanlarına Yerleşme</li>
+							<li><span class="ajanda">10:15 - 13:00</span>&emsp; Takımların Sırayla Görevlere Çağrılması</li>
+							<li><span class="ajanda">13:00 - 14:00</span>&emsp; Yemek</li>
+							<li><span class="ajanda">14:00 - 15:30</span>&emsp; Maçlara Devam</li>
+							<li><span class="ajanda">15:30 - 17:00</span>&emsp; Kapanış Konuşması &amp; Ödül Töreni </li>
 							<li><span class="ajanda">15.00</span>&emsp; Çıkış</li>
 						</ul>
 					</div>
