--- a/index.html
+++ b/index.html
@@ -328,27 +328,26 @@
 						<h5>22 Mart Cuma</h5>
 						<hr style="border-color: #666;">
 						<ul style="list-style: none; text-align: left; color: #eee;">
-							<li><span class="ajanda">08:30 - 09:00</span>&emsp; Kayıt &amp; Açılış</li>
-							<li><span class="ajanda">09:00 - 09:45</span>&emsp; Açılış Konuşması</li>
-							<li><span class="ajanda">09:45 - 10:15</span>&emsp; Çalışma Alanlarına Yerleşme</li>
-							<li><span class="ajanda">10:15 - 13:00</span>&emsp; Takımların Sırayla Görevlere Çağrılması</li>
+							<li><span class="ajanda">08:30 - 09:00</span>&emsp; Kayıt &amp; Açılış </li>
+							<li><span class="ajanda">09:00 - 13:00</span>&emsp; Deneme Maçları</li>
 							<li><span class="ajanda">13:00 - 14:00</span>&emsp; Yemek</li>
-							<li><span class="ajanda">14:00 - 15:30</span>&emsp; Maçlara Devam</li>
-							<li><span class="ajanda">15:30 - 17:00</span>&emsp; Kapanış Konuşması &amp; Ödül Töreni </li>
-							<li><span class="ajanda">15.00</span>&emsp; Çıkış</li>
+							<li><span class="ajanda">14:00 - 15:00</span>&emsp; Deneme Maçlarına Devam</li>
+							<li><span class="ajanda">15:00</span>&emsp; Çıkış</li>	
 						</ul>
 					</div>
 					<div class="col-12 col-lg-6">
 						<h5>23 Mart Cumartesi</h5>
 						<hr style="border-color: #666;">
 						<ul style="list-style: none; text-align: left; color: #eee;">
-							<li><span class="ajanda">09:00 - 09:30</span>&emsp; Kayıtlar ve Yerleşme</li>
-							<li><span class="ajanda">09:30 - 10:00</span>&emsp; Açılış Seremonisi</li>
-							<li><span class="ajanda">10:00 - 13:00</span>&emsp; Maçlar</li>
+							
+							<li><span class="ajanda">08:30 - 09:00</span>&emsp; Kayıt &amp; Açılış</li>
+							<li><span class="ajanda">09:00 - 09:45</span>&emsp; Açılış Konuşması</li>
+							<li><span class="ajanda">09:45 - 10:15</span>&emsp; Çalışma Alanlarına Yerleşme</li>
+							<li><span class="ajanda">10:15 - 13:00</span>&emsp; Takımların Sırayla Görevlere Çağrılması</li>
 							<li><span class="ajanda">13:00 - 14:00</span>&emsp; Yemek</li>
-							<li><span class="ajanda">14:00 - 16:30</span>&emsp; Maçlar</li>
-							<li><span class="ajanda">16:30 - 17:30</span>&emsp; Kapanış Konuşması ve Ödül Töreni</li>
-							<li><span class="ajanda">15:30</span>&emsp; Çıkış</li>
+							<li><span class="ajanda">14:00 - 15:30</span>&emsp; Görevlere Devam</li>
+							<li><span class="ajanda">15:30 - 17:00</span>&emsp; Kapanış Konuşması &amp; Ödül Töreni </li>
+							<li><span class="ajanda">15.00</span>&emsp; Çıkış</li>
 						</ul>
 					</div>
 				</div>
